# Alocadora-de-Filmes-Qt-Cretor

./: README.md
AlocadoraDeFilmes/: CMakeLists.txt  Images.qrc.txt  acervo.cpp  acervo.h  acervo.ui  aluguel.cpp  aluguel.h  aluguel.ui  cadastro.cpp  cadastro.h  cadastro.ui  cliente.cpp  cliente.h  cliente.ui  filme.cpp  filme.h  filme.ui  ingresso.cpp  ingresso.h  ingresso.ui  login.cpp  login.h  login.ui  main.cpp  moviesys.cpp  moviesys.h  moviesys.ui  perfil.cpp  perfil.h  perfil.ui  signup.cpp  signup.h  signup.ui
